{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 21,
  "lineage": "eec728cb-eac3-dc45-53da-9b723f8c2fc0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:731243664512:instance/i-08ff27cd6afd70902",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ff27cd6afd70902",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task3_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aa3aad3fe5c2dc2e",
            "private_dns": "ip-192-168-1-253.ap-south-1.compute.internal",
            "private_ip": "192.168.1.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-085ccb0312d8c5521",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f217e61e796eab00"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071c5c749e41c20e3",
            "tags": {
              "Name": "mysqlos"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f217e61e796eab00"
            ]
          },
          "dependencies": [
            "aws_security_group.mysqlsg",
            "aws_subnet.privatesubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000cbce3e1b899ebd",
            "arn": "arn:aws:ec2:ap-south-1:731243664512:instance/i-0afe32d562c198d52",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0afe32d562c198d52",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task3_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cc8bd4b99574b3cb",
            "private_dns": "ip-192-168-0-108.ap-south-1.compute.internal",
            "private_ip": "192.168.0.108",
            "public_dns": "ec2-13-233-83-66.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.83.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-000591f039288e307",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0e0d78e341f9378b0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c95579bb2ab3b34",
            "tags": {
              "Name": "wpos"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e0d78e341f9378b0"
            ]
          },
          "dependencies": [
            "aws_security_group.wpsg",
            "aws_subnet.publicsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ingateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:731243664512:internet-gateway/igw-0ccf5a5deb5c3668b",
            "id": "igw-0ccf5a5deb5c3668b",
            "owner_id": "731243664512",
            "tags": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-0438a06cee93aaaf8"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ccf5a5deb5c3668b",
            "id": "r-rtb-03d9f4fdbfd6afd1b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03d9f4fdbfd6afd1b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.ingateway",
            "aws_route_table.routetable",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03d9f4fdbfd6afd1b",
            "owner_id": "731243664512",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ccf5a5deb5c3668b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table"
            },
            "vpc_id": "vpc-0438a06cee93aaaf8"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetableassoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0775a6be599dec89a",
            "route_table_id": "rtb-03d9f4fdbfd6afd1b",
            "subnet_id": "subnet-00c95579bb2ab3b34"
          },
          "dependencies": [
            "aws_route_table.routetable",
            "aws_subnet.publicsubnet",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysqlsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:731243664512:security-group/sg-0f217e61e796eab00",
            "description": "allow mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f217e61e796eab00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL/Aurora",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql",
            "name_prefix": null,
            "owner_id": "731243664512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0438a06cee93aaaf8"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wpsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:731243664512:security-group/sg-0e0d78e341f9378b0",
            "description": "allow ssh and http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0d78e341f9378b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wordpress",
            "name_prefix": null,
            "owner_id": "731243664512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress"
            },
            "timeouts": null,
            "vpc_id": "vpc-0438a06cee93aaaf8"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:731243664512:subnet/subnet-071c5c749e41c20e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-071c5c749e41c20e3",
            "map_public_ip_on_launch": false,
            "owner_id": "731243664512",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0438a06cee93aaaf8"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:731243664512:subnet/subnet-00c95579bb2ab3b34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-00c95579bb2ab3b34",
            "map_public_ip_on_launch": true,
            "owner_id": "731243664512",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0438a06cee93aaaf8"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:731243664512:vpc/vpc-0438a06cee93aaaf8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-06e6b45b3d562978d",
            "default_route_table_id": "rtb-0c4ad6c1949ec0aa8",
            "default_security_group_id": "sg-0d3187de62bce38a1",
            "dhcp_options_id": "dopt-73699118",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0438a06cee93aaaf8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c4ad6c1949ec0aa8",
            "owner_id": "731243664512",
            "tags": {
              "Name": "vpctask"
            }
          }
        }
      ]
    }
  ]
}